# Core2-for-AWS-IoT-EduKit

./: .gitignore  .gitmodules  README.md
Alexa_for_IoT-Intro/: platformio.ini  sdkconfig.defaults
Alexa_for_IoT-Intro/components/misc/: alexa_logo.c  va_button.c  va_led.c
Alexa_for_IoT-Intro/components/voice_assistant/: CMakeLists.txt
Alexa_for_IoT-Intro/esp_alexa_credentials/: account.info  device.cert  device.info  endpoint.info
Blinky-Hello-World/: platformio.ini  sdkconfig.defaults
Blinky-Hello-World/components/core2forAWS/: core2forAWS.c  core2forAWS.h
Blinky-Hello-World/components/esp-cryptoauthlib/: Kconfig  README.md
Blinky-Hello-World/main/: main.c  ui.c
Blinky-Hello-World/main/includes/: ui.h
Blinky-Hello-World/src/: CMakeLists.txt  display.c  main.c  ui.c
Blinky-Hello-World/src/includes/: ui.h
Blinky-Hello-World/utilities/AWS_IoT_registration_helper/: registration_helper.py  requirements.txt
Factory-Firmware/: sdkconfig.defaults
Factory-Firmware/components/core2forAWS/: core2forAWS.h
Factory-Firmware/main/: CMakeLists.txt  clock.c  crypto.c  home.c  led_bar.c  main.c  mic.c  mpu.c  power.c  sound.c  touch.c  wifi.c
Factory-Firmware/main/includes/: clock.h  crypto.h  home.h  led_bar.h  mic.h  mpu.h  power.h  sound.h  touch.h  wifi.h
Getting-Started/: platformio.ini  sdkconfig.defaults
Hardware-Features-Demo/: platformio.ini  sdkconfig.defaults
Hardware-Features-Demo/main/: main.c  mic_fft_test.c
Smart-Thermostat/: platformio.ini  sdkconfig.defaults
Smart-Thermostat/main/: display.c  main.c
(+31 files in other folders)
